compiler/tests/fail/namespaces/common/duplicate.jazz
namespace A { fn f() {} }
namespace A { fn f() {} }
